fix metrics max width issue on IE

--- a/app/components/about-page/index.scss
+++ b/app/components/about-page/index.scss
@@ -78,6 +78,7 @@
 
         .metric {
           max-width: 300px;
+          width: 100%;
           text-align: center;
           margin: 0 auto;
 
